# tinymcp

./: .dockerignore  .env.example  .gitignore  README.md  clerk_provider.py  docker-compose.yml  dockerfile  makefile  pyproject.toml  ruff.toml  server.py
.cursor/: mcp.json.example
.cursor/skills/tinymcp-add/: SKILL.md
.cursor/skills/tinymcp-hello/: SKILL.md
docs/: agent-tool-guidelines.md
src/: __init__.py  client.py  server.py
src/config/: __init__.py
src/data/: __init__.py  repo.py
src/lib/: __init__.py  utils.py
src/tools/: __init__.py  ai_summarize.py  hello.py  listing_search.py  user_elicitation.py
