[project]
name = "tinymcp"
version = "0.0.1"
description = "Tiny MCP server with FastMCP, loguru, and pydantic-settings"
authors = [
    { name = "Roman", email = "iamromandev@gmail.com" },
]
readme = "README.md"
requires-python = "==3.13.11"
dependencies = [
    # core
    "loguru>=0.7.3",
    "pydantic-settings>=2.0",
    # mcp
    "fastmcp>=3.1.0",
    "cyclopts>=5.0.0a1",
    # ai
    "langchain-postgres>=0.0.17",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "ruff>=0.14.4",
    "mypy>=1.18.2",
    "ty>=0.0.1a25",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
